[metadata]
name = pyaerocom
version = 0.12.2dev1
author = MET Norway
description = pyaerocom model evaluation software
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/metno/pyaerocom
project_urls =
    Bug Tracker = https://github.com/metno/pyaerocom/issues
    Documentation = https://pyaerocom.readthedocs.io
    Source Code = https://github.com/metno/pyaerocom
license = GPLv3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science


[options]
python_requires = >=3.8
install_requires =
    scitools-iris>=3.1.0,!=3.2.*
    xarray>=0.16.0
    cartopy>=0.16.0,!=0.20.* # cartopy-0.20+ fails to install on CI    
    matplotlib>=3.0.1
    scipy>=1.1.0
    pandas>=0.23.0
    seaborn>=0.8.0
    geonum
    LatLon23 # required by geonum
    SRTM.py # required by geonum
    numpy>=0.12.0
    simplejson
    requests
    reverse-geocode
    tqdm
    openpyxl
    geojsoncontour
    cf-units!=3.0.1.post0; python_version == "3.10.*" # https://github.com/SciTools/cf-units/issues/218
package_dir =
    pyaerocom = pyaerocom
packages =
    pyaerocom
    pyaerocom.io
    pyaerocom.plot
    pyaerocom.tools
    pyaerocom.aeroval
    pyaerocom.scripts
    pyaerocom.data
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    pya = pyaerocom.scripts.cli:main

[options.extras_require]
docs =
    sphinx>=4.2.0
    sphinxcontrib-napoleon
    sphinx_rtd_theme
    sphinx-argparse
    nbsphinx
test =
    pytest>=6.0
    pytest-dependency
    pytest-cov
    packaging
format =
    black==22.3.0
    isort
lint =
    mypy>=0.910
    types-requests
    types-setuptools        
    types-simplejson
    pylint>=2.9
    pycodestyle>=2.8
    pydocstyle[toml]>=6.1

[pycodestyle]
max-line-length = 99
#max_doc_length = 99
extend-ignore = E203
